# slime

./: .gitignore
opengl/: .gitignore  CMakeLists.txt
opengl/src/: assignment_1.cpp  assignment_1.cpp_bkp  config.h  main.cpp
opengl/src/math/: matrix4d.cpp  matrix4d.h
opengl/src/mygl/: base.h  geometry.h  shader.cpp  shader.h
opengl/src/shader/: default.frag  default.vert
src/: Makefile  agent.c  agent.h  framework.c  framework.h  parameters.h  random.c  random.h  simulate.c
